[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pomo-fish-powerline"
version = "0.1.0"
authors = [
  { name="Jon Cinque", email="me@jonc.dev" },
]
description = "A Powerline segment to display the Pomodoro timer from pomo.fish"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/joncinque/pomo.fish/powerline"
"Bug Tracker" = "https://github.com/joncinque/pomo.fish/issues"
